# Astral-env

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
config/: conf.cpp  conf.hpp
env/: activation.cpp  activation.hpp  lexer.cpp  lexer.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  shell.cpp  shell.hpp
fetch/: fetcher.cpp  fetcher.hpp
gc/: gc.cpp  gc.hpp
lock/: lockfile.cpp  lockfile.hpp  resolver.cpp  resolver.hpp
repo/: bin_repo.cpp  bin_repo.hpp  index.cpp  index.hpp  installer.cpp  installer.hpp  registry.cpp  registry.hpp
snap/: snap.cpp  snap.hpp
snapd/: snapd.cpp
store/: entry.cpp  entry.hpp  store.cpp  store.hpp
system/: applicators.cpp  applicators.hpp  applier.cpp  applier.hpp  differ.cpp  differ.hpp  system_conf.cpp  system_conf.hpp
util/: file.cpp  file.hpp  parse.hpp  process.cpp  process.hpp  tempdir.cpp  tempdir.hpp  tempfile.cpp  tempfile.hpp
